--- a/src/styles/schedule/schedule.css
+++ b/src/styles/schedule/schedule.css
@@ -11,7 +11,7 @@ body {
 
 .schedule__container .main {
   width: 100%;
-  padding: 0 2.6rem 0 2.2rem;
+  padding: 0 2.5rem 0 2rem;
   margin: 2.4rem auto;
   font-family: "Karla";
 }
@@ -49,49 +49,127 @@ body {
 
 .schedule__container .main .main__container {
   width: 100%;
-  margin-top: 1.8rem;
-}
-
-.schedule__container .main .main__container table {
-  width: 100%;
-  font-family: "Karla";
-  padding: 0 1rem;
+  margin: auto;
+  margin-top: 2.2rem;
+  background-color: #ffff;
+  min-height: 22rem;
   border: 1px solid #e6e6e6;
-  background-color: white;
-  -webkit-box-shadow: 0 0 5px #e6e6e6;
-          box-shadow: 0 0 5px #e6e6e6;
-}
-
-.schedule__container .main .main__container table thead {
+  -webkit-box-shadow: 0 0 2px #e6e6e6;
+          box-shadow: 0 0 2px #e6e6e6;
+  padding: 1rem 1.2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 20px;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+  position: relative;
+}
+
+.schedule__container .main .main__container .head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 20px;
+  padding: 0.3rem 0 6px;
+  width: 100%;
   border-bottom: 1px solid #b4b4b4;
-  padding: 1.1rem 2.4rem;
 }
 
-.schedule__container .main .main__container table thead th {
+.schedule__container .main .main__container .head p {
+  font-size: 20px;
   font-weight: 500;
+  width: 14%;
+  text-align: center;
 }
 
-.schedule__container .main .main__container table tbody {
-  outline: none;
-  min-height: 10rem;
-  height: 17rem;
+.schedule__container .main .main__container .blocks {
   width: 100%;
+  min-height: 17rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: auto;
+  position: relative;
+  overflow: hidden;
 }
 
-.schedule__container .main .main__container table tbody tr {
-  height: 5rem;
-  min-height: 5rem;
+.schedule__container .main .main__container .blocks .weekday {
+  min-width: 11%;
+  min-height: 17rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+
+.schedule__container .main .main__container .blocks .today {
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgba(173, 216, 230, 0.678);
+}
+
+.schedule__container .main .info {
   width: 100%;
-  text-align: left;
+  margin: auto;
+  margin-top: 2rem;
+  padding: 10px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.schedule__container .main .info p {
+  color: #333;
+  font-size: 20px;
+}
+
+.schedule__container .main .ongoing {
+  background-color: #4bb543;
+}
+
+.schedule__container .main .ongoing p {
+  color: yellow;
+}
+
+.schedule__container .main .upcoming {
+  background-color: #ffe6008a;
 }
 /*# sourceMappingURL=schedule.css.map */
